# immersion

./: .gitignore  .gitmodules  ApiKeyDialog.cpp  AppDataManager.cpp  AppDataManager.h  AppDataWriter.cpp  AppDataWriter.h  CMakeLists.txt  CMakeLists.txt.autosave  FeedbackDialog.cpp  FeedbackDialog.h  OpenAICommunicator.cpp  OpenAICommunicator.h  PromptEditDialog.cpp  PromptEditDialog.h  README.md  SettingsManager.cpp  SettingsManager.h  inno.iss  keychainclass.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressdialog.cpp  progressdialog.h  progressdialog.ui
.github/workflows/: publish.yaml
docs/: spell_checker.md
flatpak/: .gitignore  io.github.hytromo.immersion.desktop  io.github.hytromo.immersion.metainfo.xml  io.github.hytromo.immersion.yml
include/: ApiKeyDialog.h  AppConfig.h  KeychainManager.h  ModelEditDialog.h  NetworkRequestManager.h  OpenAICommunicator.h  PromptEditDialog.h  SettingsManager.h  SingleInstance.h  SpellChecker.h  StringUtils.h  keychainclass.h  mainwindow.h
src/: ApiKeyDialog.cpp  AppConfig.cpp  AppDataManager.cpp  KeychainManager.cpp  ModelEditDialog.cpp  NetworkRequestManager.cpp  OpenAICommunicator.cpp  ProgressDialog.cpp  PromptEditDialog.cpp  SettingsManager.cpp  SingleInstance.cpp  SpellChecker.cpp  SpellChecker_macOS.mm  StringUtils.cpp  main.cpp  mainwindow.cpp  progressdialog.cpp
ui/: mainwindow.ui
